fixing product page layout bug

--- a/app/_components/cards/ProductDescription/ProductDescription.module.scss
+++ b/app/_components/cards/ProductDescription/ProductDescription.module.scss
@@ -43,6 +43,8 @@
   .container {
     padding: 0;
     position: initial;
+    height: fit-content;
+    grid-row: 1/2;
   }
 }
 @media only screen and (max-width: 600px) {
